Fix columns and give them appropriate width and gap. Change text color

--- a/week06-07/styles/loveofnailz.css
+++ b/week06-07/styles/loveofnailz.css
@@ -79,11 +79,11 @@ body {
 }
 
 .menu__container:has(a:active) {
-    background-color: #E6E6FA;
+    background-color: #228b225f;
 }
 
 .header__menu:active {
-    background-color: #E6E6FA;
+    background-color: #228b225f 228b22;
     transform: scale(0.95);
 }
 
@@ -143,6 +143,7 @@ body {
     display: grid;
     justify-items: center;
     margin: 20px auto 0;
+    gap: 10px;
 }
 
 .main__intro {
@@ -162,24 +163,37 @@ body {
 }
 
 .main__pricelist {
-    grid-column: 1 / 3;
     display: grid;
-    grid-template-columns: repeat(2, calc(50% - 2.5px));
-    width: calc(100% - 5px);
+    grid-template-columns: calc(50% - 2.5px);
     gap: 5px;
     border: 1px solid #ff9100;
-    margin-top: 20px;
+    width: 90%;
+    justify-self: start;
 }
 
-.main__pricelist_header {
+.add-ons {
+    display: grid;
+    grid-template-columns: calc(50% - 2.5px);
+    gap: 5px;
+    border: 1px solid #ff9100;
+    width: 90%;
+    justify-self: end;
+}
+
+.main__pricelist_p,
+.main__addon_p {
     text-align: center;
     grid-column: 1 / 3;
     border-top: 1px solid #ff9100;
+    font-weight: bold;
+    font-size: 14px;
 }
 
-.main__pricelist h2 {
+.main__pricelist h2,
+.add-ons h2 {
     grid-column: 1 / 3;
     text-align: center;
+    color: #228b22;
 }
 
 .div1 ul,
@@ -193,6 +207,10 @@ body {
 
 .div2 li {
     text-align: left;
+}
+
+.hightlight {
+    color: #228b22;
 }
 
 .footer {
